overflow fix

--- a/src/scss/supervisor.scss
+++ b/src/scss/supervisor.scss
@@ -12,7 +12,6 @@ body {
 
 html, body {
   height: 100%;
-  overflow-y: hidden;
 }
 
 h1 {
